[package]
name = "xmc4200-hexkit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
panic-semihosting = "0.6.0"
xmc4-hal = { version = "0.3.3", features = ["xmc4200"] }


[features]
critical-section = []